cadaver (0.23.3-2) unstable; urgency=low

  * debian/control, debian/rules:
    - Explicitly build-depend and link against libgcrypt. The function is used
      by cadaver directly, causing a build failure with current build tools.
      Thanks to David Suárez for reporting this (Closes: #720800).
  * debian/control:
    - Bumped standards-version to 3.9.4.

 -- Sebastian Harl <tokkee@debian.org>  Sat, 23 Nov 2013 16:27:43 +0100

cadaver (0.23.3-1) unstable; urgency=low

  * New upstream version:
    - Added support for pkg-config when checking for gnutls to configure -
      recent versions of gnutls no longer provide libgnutls-config which was
      used previously for those checks; thanks to Lucas Nussbaum and Peter
      Fritzsche for reporting this (Closes: #549797, #554041).
    - Added full support for large files (> 2GB); thanks to Andreas
      Unterkircher for reporting this (Closes: #529564).
  * debian/control:
    - Added libreadline-dev as the preferred option to the libreadline5-dev
      build-dependency; thanks to Matthias Klose for reporting this
      (Closes: #553736).
    - Updated Standards-Version to 3.8.3 - no changes.
  * Added debian/README.source:
    - The file includes a pointer to /usr/share/doc/dpatch/README.source.gz.
  * debian/patches:
    - Updated manpage_hyphen.dpatch.

 -- Sebastian Harl <tokkee@debian.org>  Sat, 26 Dec 2009 16:27:06 +0100

cadaver (0.23.2-1) unstable; urgency=low

  * New upstream version.
  * Moved "Homepage" field from package description to the source stanza.
    - Added a versioned build dependency on dpkg-dev (>= 1.14.6).
  * Updated neon build dependency to libneon27-gnutls-dev (>= 0.28) - older
    versions are no longer supported.
  * Updated standards-version to 3.8.0 - no changes.
  * Removed alternate build-dependency on libxml-dev (Closes: #475552).
  * Remove generated .gmo-files from po/ in the "clean" target to ensure clean
    double-builds.